--- a/software/src/interface/RGB-control/ui/main.ui
+++ b/software/src/interface/RGB-control/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>270</height>
+    <width>242</width>
+    <height>305</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>381</width>
-      <height>141</height>
+      <width>221</width>
+      <height>191</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -29,155 +29,14 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QSpinBox" name="spinBox_G">
+    <widget class="RGBSelect" name="RGBselect" native="true">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>55</y>
-       <width>71</width>
-       <height>30</height>
+       <x>0</x>
+       <y>0</y>
+       <width>221</width>
+       <height>191</height>
       </rect>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-    </widget>
-    <widget class="QSpinBox" name="spinBox_B">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>95</y>
-       <width>71</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-    </widget>
-    <widget class="QSlider" name="hSlider_B">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>100</y>
-       <width>160</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-    <widget class="QSlider" name="hSlider_R">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>20</y>
-       <width>160</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="toolTip">
-      <string/>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-    <widget class="QSpinBox" name="spinBox_R">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>15</y>
-       <width>71</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-    </widget>
-    <widget class="QSlider" name="hSlider_G">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>60</y>
-       <width>160</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <number>65535</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-    <widget class="QWidget" name="colorWidget" native="true">
-     <property name="geometry">
-      <rect>
-       <x>290</x>
-       <y>20</y>
-       <width>71</width>
-       <height>101</height>
-      </rect>
-     </property>
-     <property name="autoFillBackground">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_R">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>16</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>R</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_G">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>60</y>
-       <width>16</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>G</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_B">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>100</y>
-       <width>16</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>B</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </widget>
@@ -185,9 +44,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
-      <width>381</width>
-      <height>81</height>
+      <y>210</y>
+      <width>221</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -199,9 +58,9 @@
     <widget class="QPushButton" name="pushButton_connect">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>10</y>
-       <width>90</width>
+       <x>10</x>
+       <y>30</y>
+       <width>91</width>
        <height>28</height>
       </rect>
      </property>
@@ -212,9 +71,9 @@
     <widget class="QPushButton" name="pushButton_send">
      <property name="geometry">
       <rect>
-       <x>280</x>
-       <y>40</y>
-       <width>90</width>
+       <x>119</x>
+       <y>30</y>
+       <width>91</width>
        <height>28</height>
       </rect>
      </property>
@@ -222,27 +81,39 @@
       <string>Enviar cor</string>
      </property>
     </widget>
-    <widget class="QLabel" name="labelFixed_titleConnect">
+    <widget class="QLabel" name="title_status">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>61</width>
+       <width>51</width>
        <height>16</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="text">
-      <string>Conexão:</string>
+      <string>Status: </string>
      </property>
     </widget>
     <widget class="QLabel" name="label_statusIsConnect">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>60</x>
        <y>10</y>
-       <width>121</width>
+       <width>91</width>
        <height>16</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="text">
       <string>Desconectado</string>
@@ -252,103 +123,14 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>RGBSelect</class>
+   <extends>QWidget</extends>
+   <header>src/utils/RGB-select/rgbselect</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>hSlider_R</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>spinBox_R</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>168</x>
-     <y>60</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>218</x>
-     <y>67</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>spinBox_R</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>hSlider_R</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>229</x>
-     <y>55</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>194</x>
-     <y>57</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>hSlider_G</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>spinBox_G</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>182</x>
-     <y>96</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>227</x>
-     <y>99</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>spinBox_G</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>hSlider_G</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>225</x>
-     <y>111</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>197</x>
-     <y>107</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>hSlider_B</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>spinBox_B</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>181</x>
-     <y>135</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>218</x>
-     <y>139</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>spinBox_B</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>hSlider_B</receiver>
-   <slot>setValue(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>222</x>
-     <y>151</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>194</x>
-     <y>148</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
