Finished Buttons UI: interactive interface that connects buttons to other board components on demand.
Next are the microphone and the display (postponed)

--- a/software/src/interface/Button-control/ui/options/container.ui
+++ b/software/src/interface/Button-control/ui/options/container.ui
@@ -86,7 +86,7 @@
     <string>Modo:</string>
    </property>
   </widget>
-  <widget class="QComboBox" name="comboBox">
+  <widget class="QComboBox" name="modeSelect">
    <property name="geometry">
     <rect>
      <x>120</x>
